--- a/package.json
+++ b/package.json
@@ -230,6 +230,7 @@
     "antd": "^4.19.3",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.4",
+    "electron-reload": "^2.0.0-alpha.1",
     "electron-updater": "^4.6.5",
     "fs": "^0.0.1-security",
     "history": "^5.2.0",
